# mailtutan

./: .dockerignore  .gitattributes  .gitignore  Cargo.toml  Dockerfile  LICENSE.txt  Makefile  README.md
.github/workflows/: release.yml  rust.yml
mailtutan/: Cargo.toml
mailtutan-lib/: .gitignore  Cargo.toml  dist
mailtutan-lib/src/: api.rs  auth.rs  lib.rs  smtp.rs  storage.rs  store.rs  web_hook.rs
mailtutan-lib/src/api/: assets.rs  messages.rs  version.rs  websocket.rs
mailtutan-lib/src/models/: message.rs
mailtutan-lib/src/storage/: memdir.rs  memory.rs
mailtutan-lib/static/: index.html  styles.css
mailtutan-web/: Cargo.toml  Trunk.toml  index.html  styles.css
mailtutan-web/release/: index.html  mailtutan-web.js  mailtutan-web_bg.wasm
mailtutan-web/src/: api.rs  component.rs  emails_list.rs  header.rs  main.rs  message_view.rs  resizer.rs  ws.rs
mailtutan-web/src/component/: header.rs  message_list.rs  message_view.rs  root.rs
mailtutan/src/: config.rs  main.rs
public/: index.html  modernizr.js  scripts.js  styles.css
src/: api.rs  main.rs  message.rs  models.rs  smtp.rs  store.rs
src/api/: assets.rs  messages.rs  version.rs  websocket.rs
src/models/: message.rs
