[workspace.package]
authors = ["Mohsen Alizadeh <mohsen@alizadeh.us>"]
homepage= "https://github.com/mailtutan/mailtutan"
version = "0.1.0"
edition = "2021"
license = "MIT"
readme = "../README.md"

[profile.release]
opt-level = 'z'
lto = true
strip = true

[workspace]
members = [
  "mailtutan",
  "mailtutan-lib",
  "mailtutan-web"
]
