[workspace.package]
authors = ["Mohsen Alizadeh <mohsen@alizadeh.us>"]
homepage= "https://github.com/mailtutan/mailtutan"
version = "0.3.0"
edition = "2021"
license = "MIT"
readme = "README.md"
keywords = ["email", "SMTP", "smtp-server", "wasm", "webassembly"]

[profile.release]
opt-level = 'z'
lto = true
strip = true

[workspace]
members = [
  "mailtutan",
  "mailtutan-lib",
  "mailtutan-web"
]

[workspace.dependencies]
anyhow = "1.0.71"
