[package]
name = "mailtutan-lib"
authors.workspace = true
homepage.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
description = "a fake smtp server for test and development environments written in Rust - library"

[dependencies]
tokio = "1.26"
async-trait = "0.1.67"
axum = { version =  "0.6.18", features = ["ws"] }
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
mailin-embedded = "0.8.0"
chrono = "0.4.24"
futures = "0.3.28"
once_cell = "1.17.1"
mail-parser = "0.8.2"
