[package]
name = "mailtutan-lib"
authors.workspace = true
homepage.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true
keywords.workspace = true
description = "The library used in mailtutan project to implement an SMTP server for test and development environments."

[dependencies]
tokio = "1.26"
async-trait = "0.1.67"
axum = { version =  "0.6.18", features = ["ws", "headers"] }
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
mailin-embedded = "0.8.1"
mailin = "0.6.3"
chrono = "0.4.24"
futures = "0.3.28"
once_cell = "1.17.1"
mail-parser = "0.8.2"
uuid = { version = "1.3.3", features = ["v4"] }
http-body = "0.4.5"
