[package]
name = "mailtutan-lib"
authors.workspace = true
homepage.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true
keywords.workspace = true
description = "The library used in mailtutan project to implement an SMTP server for test and development environments."

[dependencies]
tokio = "1.26"
async-trait = "0.1.67"
axum = { version =  "0.6", features = ["ws", "headers"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
mailin-embedded = "0.8"
mailin = "0.6"
chrono = { workspace = true }
futures = "0.3"
mail-parser = "0.9"
uuid = { version = "1", features = ["v4"] }
http-body = "1"
anyhow = { workspace = true }
reqwest = { version = "0.11", features = ["json"] }
