[package]
name = "mailtutan-web"
authors.workspace = true
homepage.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
description = "a fake smtp server for test and development environments written in Rust - web interface"

[dependencies]
yew = { version = "0.20.0", features = ["csr"] }
yewdux = "0.9"
serde_json = "1.0.81"
gloo-net = "0.2"
gloo-utils = "0.1.6"
gloo-dialogs = "0.1.1"
serde = { version = "1.0", features = ["derive"] }
wasm-bindgen-futures = "0.4"
futures = "0.3.28"
log = "0.4.6"
wasm-logger = "0.2.0"

[dependencies.web-sys]
version = "0.3.63"
features = [
	"HtmlLiElement",
  "HtmlTableCellElement",
  "HtmlIFrameElement"
]
