[package]
name = "mailtutan"
authors.workspace = true
homepage.workspace = true
version.workspace = true
edition.workspace = true

[dependencies]
tokio = { version = "1.26", features = ["full"] }
async-trait = "0.1.67"
axum = { version =  "0.6.18", features = ["ws"] }
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
mailin-embedded = "0.8.0"
chrono = "0.4.24"
futures = "0.3.28"
mailtutan-lib = { path = "../mailtutan-lib" }
clap = { version = "4.3.0", features = ["derive", "env"] }
