[package]
name = "mailtutan"
authors.workspace = true
homepage.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true
keywords.workspace = true
description = "An SMTP server for test and development environments."

[dependencies]
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
axum = { version =  "0.6", features = ["ws"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
mailin-embedded = "0.8"
chrono = { workspace = true }
futures = "0.3"
mailtutan-lib = { version = "0.3.0", path= "../mailtutan-lib" }
clap = { version = "4.3", features = ["derive", "env"] }
http = "1"
